<resources>
    <string name="app_name">Character Generator</string>
    <string name="placeholdertext">PlaceholderText</string>
    <string name="welcome_username">Welcome, [username]!</string>
    <string name="saved_characters">Saved Characters</string>
    <string name="generate_a_new_character">Generate a New Character</string>
    <string name="settings">Settings</string>
    <string name="generate_new_character">Generate New Character</string>
    <string name="saved_characters_title">Saved Characters</string>
    <string name="saved_character_default_text">No character yet saved. Go back and select Generate a New Character, then hit the Save button to save a character!</string>
    <string name="character_details_placeholder">[Character details will go here]</string>
    <string name="generate_new_from_generator_screen_button_text">Generate a New Character</string>
    <string name="save_character">Save Character</string>
    <string name="change_password">Change Password</string>
    <string name="edit_saved_characters">Edit Saved Characters</string>
    <string name="character_generator_login_title">Character Generator</string>
    <string name="please_log_in">Please log in:</string>
    <string name="usernameHint">username</string>
    <string name="loginScreenPasswordHint">password</string>
    <string name="logInButtonText">Log In</string>
    <string name="enter_your_old_password_here">Enter Your Old Password Here</string>
    <string name="old_password">Old Password</string>
    <string name="enter_new_password">Enter Your New Password Here</string>
    <string name="new_password">New Password</string>
    <string name="confirm_your_new_password_here">Confirm Your New Password Here</string>
    <string name="change_password_for_button">Change Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="edit_saved_characters_details_placeholder">This text is placeholder for a saved character. In an ideal world this character would have a checkbox a user could select for deletion for each character so that user could choose which characters to remove from their saved characters list.</string>
    <string name="remove_selected_characters">Remove Selected Characters</string>
    <string name="admin_options">Admin Options</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_lists">Manage Lists</string>
    <string name="manage_user_placeholder_text_view">This is where I want the User Table to be pulled and display each user alphabetically by username. Ideally I\'d want the user to be a selectable item via radio button so that one user can be selected at a time.</string>
    <string name="delete_selected_user">Delete Selected User</string>
    <string name="edit_selected_user">Edit Selected User</string>
    <string name="manage_lists_placeholder_text_view">This is where I want to pull the database for the titles of each table. Ideally I would like each to be selectable via radio button, so that only one could be selectable at a time, and then be actionable upon with the below buttons.</string>
    <string name="add_attributes">Add Attributes</string>
    <string name="edit_attributes">Edit Attributes</string>
    <string name="sign_up">Sign Up</string>
</resources>