<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">


    <TextView
        android:id="@+id/generatorEnterOldPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/enter_your_old_password_here"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/generatorOldPasswordField"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autofillHints="password"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatorEnterOldPasswordTextView" />
    <TextView
        android:id="@+id/generatorEnterNewPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:padding="8dp"
        android:text="@string/enter_new_password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatorOldPasswordField" />
    <EditText
        android:id="@+id/generatorNewPasswordField"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autofillHints="password"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatorEnterNewPasswordTextView" />
    <TextView
        android:id="@+id/generatorConfirmNewPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:padding="8dp"
        android:text="@string/confirm_your_new_password_here"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatorNewPasswordField" />
    <EditText
        android:id="@+id/generatorNewPasswordFieldAgain"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autofillHints="password"
        android:hint="@string/new_password_again"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatorConfirmNewPasswordTextView" />
    <Button
        android:id="@+id/generatorChangePasswordButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_password_for_button"
        android:textSize="22sp"
        android:backgroundTint="@color/material_dynamic_primary20"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatorNewPasswordFieldAgain"/>
</androidx.constraintlayout.widget.ConstraintLayout>