<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/generatorTitleLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/character_generator_login_title"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/generatorPleaseLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/please_log_in"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatorTitleLoginTextView" />

    <EditText
        android:id="@+id/generatorUsernameField"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:autofillHints="username"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatorPleaseLogIn" />

    <EditText
        android:id="@+id/generatorPasswordField"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="0dp"
        android:autofillHints="password"
        android:hint="@string/loginScreenPasswordHint"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatorUsernameField" />

    <Button
        android:id="@+id/generatorLogInButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:text="@string/logInButtonText"
        android:textSize="22sp"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatorPasswordField"/>


</androidx.constraintlayout.widget.ConstraintLayout>