<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateCharacter">

    <TextView
        android:id="@+id/generatorSavedCharacterDetails"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/character_details_placeholder"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/generatorSaveCharacter"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/material_dynamic_primary20"
        android:textColor="@color/white"
        android:text="@string/save_character"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/generatorNewFromGeneratorScreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/generatorNewFromGeneratorScreenButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/material_dynamic_primary20"
        android:textColor="@color/white"
        android:text="@string/generate_new_from_generator_screen_button_text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>